<resources>
    <string name="app_name">Animalia</string>
    <string name="greeting">Hallo!</string>
    <string name="button_skill">Oefen</string>
    <string name="button_learn">Leer</string>
    <string name="button_lesson_next">Volgende les</string>
    <string name="description_image_lesson">Foto van het dier waar de les over gaat</string>
    <string name="description_image_lesson_overview">Ster die aangeeft of de les al gevolgd is of niet</string>
    <string name="button_question_true">Juist</string>
    <string name="button_question_false">Fout</string>
    <string name="textview_question_win">Hoera! Gewonnen!</string>
    <string name="textview_score">Score: %d / %d</string>
    <string name="textview_question_lose">Helaas, je hebt verloren</string>
    <string name="button_question_continue">Verdergaan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">Over deze app</string>
    <string name="menu_lesson_overview">Lesoverzicht</string>
    <string name="menu_lesson">Start les</string>
    <string name="menu_truefalse">Start juist/fout spel</string>
    <string name="lesson_finished_text">Proficiat, je hebt alle lessen afgewerkt!</string>
    <string name="warning_lesson_not_enabled">Volg eerst voorgaande lessen om deze les vrij te geven</string>
    <string name="quizElement_finished_text">Proficiat, je hebt alle quizvragen afgewerkt!</string>
    <string name="button_lesson_previous">Vorige les</string>
    <string name="time_text">Tijd: %s:%s</string>
    <string name="textview_total_questions">Totaal aantal vragen: 3</string>
    <string name="true_or_false">Juist of fout?</string>
    <string name="finished_button">Klaar</string>
    <string name="textview_added_xp">+ %dXP</string>
    <string name="textview_new_level">Level %d</string>
    <string name="textview_new_xp">%dXP</string>
    <string name="textview_new_stats">Nieuwe stand</string>
    <string name="added_lesson_xp">Gained 2XP!</string>
    <string name="finished_lessons_dialog_title">Alle lessen afgewerkt</string>
    <string name="finished_lessons_dialog_message">Proficiat! Je hebt alle lessen afgewerkt. Open het zijmenu om het lesoverzicht te openen als je lessen wilt herbekijken.</string>
    <string name="finished_questions_dialog_title">Alle oefeningen afgewerkt</string>
    <string name="finished_questions_dialog_message">Proficiat! Je hebt alle oefeningen afgewerkt.</string>
    <string name="continue_button">Verder</string>
    <string name="correct_title">Correct!</string>
    <string name="incorrect_title">Incorrect</string>
    <string name="ok">OK</string>

    <!--    auth0-->
    <string name="auth_client_id">lSTcwHGwt3BGvoUn2DdCNV63JbFotUHt</string>
    <string name="auth_domain">dev-7lib3b4rq1u5iajd.us.auth0.com</string>

    <!-- Login and logout -->
    <string name="logout_text_confirm">Ben je zeker dat je wilt uitloggen?</string>
    <string name="logout_text">Je bent uitgelogd</string>
    <string name="welcome_text">Welkom</string>
    <string name="login_button">Login</string>
    <string name="logout_button">Logout</string>
    <string name="logout_title">Logout</string>
    <string name="invalid_login">Ongeldige login, probeer opnieuw aub</string>
    <string name="login_ok">Hallo!</string>
    <string name="login_nok">Login mislukt, probeer opnieuw aub</string>
    <string name="logout_ok">Tot ziens!</string>
    <string name="logout_nok">Logout mislukt, probeer opnieuw aub</string>

    <!--    profile page-->
    <string name="personal_data">Persoonlijke gegevens</string>
    <string name="firstname">Voornaam</string>
    <string name="lastname">Familienaam</string>
    <string name="email">Email</string>
    <string name="level">Level</string>
    <string name="statistics">Statistieken</string>
    <string name="xp">XP</string>
    <string name="number_finished_lessons">Afgewerkte lessen</string>
    <string name="number_finished_quizzes">Afgewerkte quizzen</string>
    <string name="menu_profile">Profiel</string>
    <string name="level_value">Level %d</string>
    <string name="xp_value">%d</string>
    <string name="textfield_firstname">Voornaam</string>
    <string name="textfield_lastname">Familienaam</string>
    <string name="reset_button">Reset</string>
    <string name="user_reset">Gebruiker is reset</string>
    <string name="profile_dialog_edit_title">Gegevens bewerken</string>
    <string name="profile_dialog_edit_save">Opslaan</string>
    <string name="profile_dialog_edit_cancel">Annuleer</string>
    <string name="profile_dialog_reset_title">Statistieken resetten?</string>
    <string name="profile_dialog_reset_message">Ben je zeker dat je je statistieken wilt resetten? Al je voortgang zal hierdoor verloren gaan.</string>
    <string name="profile_dialog_reset_button">Reset</string>
    <string name="profile_dialog_reset_cancel">Annuleer</string>

    <string name="about_text">
Welkom op Animalia!\n\nOnze app biedt je de mogelijkheid om meer te ontdekken over verschillende diersoorten van over de hele wereld.\n\nMaar het gaat niet alleen om leren, we hebben ook quizvragen gecreëerd om je kennis te testen.\n\nDank je voor het kiezen van Animalia om je dierenkennis te vergroten. Veel plezier met ontdekken, leren en spelen!\n\nHet Animalia Team
    </string>
    <string name="button_lesson_previous_short">Vorige</string>
    <string name="button_lesson_next_short">Volgende</string>
</resources>