<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.animalia.screens.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/personal_data_title"
            style="@style/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/personal_data_labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personal_data_title">

            <TextView
                style="@style/text_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstname" />

            <TextView
                style="@style/text_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.currentUser.firstName}"
                tools:text="Jan" />

            <TextView
                style="@style/text_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastname" />

            <TextView
                style="@style/text_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.currentUser.lastName}"
                tools:text="Jansen" />

            <TextView
                style="@style/text_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <TextView
                style="@style/text_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.currentUser.email}"
                tools:text="jan.jansen@mail.com" />

        </LinearLayout>

        <TextView
            android:id="@+id/statistics_title"
            style="@style/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/statistics"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personal_data_labels" />

        <LinearLayout
            android:id="@+id/statistics_labels"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statistics_title">

            <TextView
                style="@style/text_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level" />

            <TextView
                style="@style/text_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xp" />

            <TextView
                style="@style/text_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_finished_lessons" />

            <TextView
                style="@style/text_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_finished_quizzes" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/statistics_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/statistics_labels"
            app:layout_constraintTop_toBottomOf="@+id/statistics_title">

            <TextView
                android:id="@+id/level_value"
                style="@style/text_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:levelValue="@{viewModel.currentUser.level}"
                tools:text="Level 3" />

            <TextView
                style="@style/text_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:xpValue="@{viewModel.currentUser.xp}"
                tools:text="32" />

            <TextView
                style="@style/text_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:finishedLessonsValue="@{viewModel.currentUser.lastLessonIndex}"
                tools:text="10" />

            <TextView
                style="@style/text_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:finishedQuizzesValue="@{viewModel.currentUser.lastQuestionIndex}"
                tools:text="5" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>