<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="LoginViewModel"
            type="com.example.animalia.security.LoginViewModel" />
    </data>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/login_image"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/welcome_text"
                android:src="@drawable/animals"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/login_logout_message"
                style="@style/text_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                tools:text="Hier komt een message" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="150dp"
                android:layout_height="75dp"
                android:text="@string/login_button" />

            <Button
                android:id="@+id/logout_button"
                android:layout_width="150dp"
                android:layout_height="75dp"
                android:text="@string/logout_button" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="16dp" />

        </LinearLayout>

    </layout>